<resources>
    <string name="app_name">WifiFileTranfer</string>
    <string name="group_button">Groups</string>
    <string name="Files_button">Files</string>
    <string name="NA_button">Y</string>
    <string name="X_button">X</string>
    <string name="upload_button">Upload</string>
    <string name="New_Grp">Create Group</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_grp">GrpActivity</string>
    <string name="discover_peers_button">discover peer</string>
    <string name="lable_groups">Groups</string>
    <string name="message">No Groups found</string>
    <string name="connect_peer_button"></string>
    <string name="disconnect_peer_button"></string>
    <string name="get_file_button"></string>
</resources>
